# stranno

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: phase-0-checklist.md
docs/adr/: ADR-0001-core-language.md  ADR-0002-desktop-shell.md
fix2_straNNo_nazrOS/: APPLY.md  vite.config.ts
fix2_straNNo_nazrOS/.github/workflows/: ci.yml
fix2_straNNo_nazrOS/src-tauri/src/: main.rs
fix2_straNNo_nazrOS/src/ui/src/components/layout/: WorkspaceArea.tsx
fix3_straNNo_nazrOS/: APPLY.md
fix3_straNNo_nazrOS/src/ui/src/components/layout/: WorkspaceArea.tsx
fix3_straNNo_nazrOS/src/ui/src/components/modules/: МодульСтудия.module.css  МодульСтудия.tsx  МодульШина.module.css
src/core/: Cargo.toml
src/core/src/: error.rs  lib.rs
src/core/src/events/: mod.rs
src/core/src/formats/: mod.rs  nzr.rs  нзр.rs
src/core/src/history/: mod.rs
src/core/src/memory/: mod.rs
src/core/src/plugins/: mod.rs
src/core/src/scene/: component.rs  mod.rs  node.rs  transform.rs
src/ui/: .eslintrc.json  index.html  package-lock.json  package.json
src/ui/src-tauri/: Cargo.toml  tauri.conf.json
src/ui/src-tauri/src/: lib.rs
src/ui/src/components/layout/: StatusBar.tsx  TopBar.tsx  WorkspaceArea.module.css  WorkspaceArea.tsx
src/ui/src/components/modules/: МодульГлюк.module.css  МодульГлюк.tsx  МодульМульт.module.css  МодульМульт.tsx  МодульПоле.module.css  МодульПоле.tsx  МодульРуки.tsx  МодульСтудия.module.css  МодульСтудия.tsx  МодульТочки.module.css  МодульТочки.tsx  МодульШина.module.css  МодульШина.tsx  ╨Ь╨╛╨┤╤Г╨╗╤М╨в╨╛╤З╨║╨╕.module.css  ╨Ь╨╛╨┤╤Г╨╗╤М╨в╨╛╤З╨║╨╕.tsx
src/ui/src/styles/: globals.css
stranno_full/: .gitignore  APPLY.md  Cargo.toml  README.md
stranno_full/docs/: core-architecture.md
stranno_full/docs/adr/: ADR-0003-file-formats.md
stranno_full/src/core/: Cargo.toml
stranno_full/src/core/src/events/: mod.rs
stranno_full/src/core/src/formats/: mod.rs
stranno_full/src/core/src/plugins/: mod.rs
stranno_full/src/core/src/scene/: mod.rs  node.rs  transform.rs
stranno_full/src/infra/: README.md
stranno_full/src/modules/: README.md
stranno_full/src/ui/: package.json  tokens.css
stranno_full/src/ui/src/: App.tsx
stranno_full/src/ui/src/components/layout/: StatusBar.module.css  TopBar.module.css
stranno_full/src/ui/src/components/modules/: МодульРуки.module.css
stranno_full/src/ui/src/store/: appStore.ts
