[workspace]
resolver = "2"
members = [
    "src/core",
    # src/modules/руки       ← добавится в Фазе 2
    # src/modules/мульт      ← добавится в Фазе 3
    # src/modules/точки      ← добавится в Фазе 3
    # src/modules/студия     ← добавится в Фазе 4
    # src/modules/поле       ← добавится в Фазе 5
    # src/modules/шина       ← добавится в Фазе 5
    # src/modules/глюк       ← добавится в Фазе 5
]

[workspace.package]
edition    = "2021"
authors    = ["nazrOS Team"]
license    = "UNLICENSED"
repository = "https://github.com/nazrOS/stranno"

[workspace.dependencies]
# Переиспользуемые зависимости — версии задаём здесь один раз
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1",    features = ["v4", "serde"] }
glam        = { version = "0.28", features = ["serde"] }
tokio       = { version = "1",    features = ["full"] }
tracing     = "0.1"
thiserror   = "1"
anyhow      = "1"
chrono      = { version = "0.4",  features = ["serde"] }
